/*
 *
 */

2009-03-25 00:18 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  + include/wxh/gauge.ch
  * wxharbour.spec
    + added gauge.ch with defines needed for gauges

  * include/wxharbour.ch
  * src/common/wxhfuncs.prg
    + added clause ON INITDIALOG to dialogs

  * makefile.gcc
    * updated makefile for Win/MinGW builds

  * src/raddox/talias.prg
    * using BREAK to raise error (must be into a BEGIN/END SEQUENCE block)

  * src/wxbase/app/wx_app.cpp
    + added function wxSafeYield()

2009-03-24 04:25 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  + include/wxbase/wx_gauge.h
  + src/wxbase/static/wx_gauge.cpp
  + src/wxbase/static/wxhGauge.prg
  * include/wxharbour.ch
  * src/common/wxhfuncs.prg
    + added wxGauge class
    + added COMMAND @ GAUGE ...
    

  * include/wxhevtdefs.h
  * include/wxh.h
  + src/wxbase/baseclasses/wxhInitDialogEvent.prg
  * src/wxbase/baseclasses/wx_evthandler.cpp
  * src/wxbase/baseclasses/wxhevthandler.prg
    + added wxInitDialogEvent

  * src/wxbase/app/wx_app.cpp
  * src/wxbase/app/wxhapp.prg
    + added wxApp:Yield method

2009-03-23 17:49 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * include/wxharbour.ch
    ! Fixed stupid typo on DESTROY command

2009-03-23 17:47 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * include/wxharbour.ch
  * src/wxbase/baseclasses/wxhobject.prg
  * src/wxbase/baseclasses/wx_object.cpp
    + added command DESTROY <obj> to delete wxh_Item's associated to objs
    * renamed ::__Delete to ::__Destroy

2009-03-23 17:33 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  + src/wxbase/baseclasses/wxhsizeevent.prg
  + src/wxbase/baseclasses/wx_sizeevent.cpp
    + added wxSizeEvent
      ; TODO: need to implement wxSize class on harbour

  * samples/arrbrowser/arrbrowser.prg
  * samples/dbbrowser/dbbrowser.prg
  * samples/wxhBrowse/wxhBrowse.prg
    * Updated samples

  * src/common/wxhfuncs.prg