@@ -18,5 +18,6 @@
 #define WXH_GRIDEVENT           3
 #define WXH_MOUSEEVENT          4
 #define WXH_INITDIALOGEVENT	5
+#define WXH_ACTIVATEEVENT       6
 
 #endif
