@@ -17,27 +17,19 @@
 #include "hbclass.ch"
 #include "property.ch"
 #include "wx.ch"
-#include "wxhevtdefs.h"
 
 /*
-  wxEvtHandler
+  wxActivateEvent
   Teo. Mexico 2009
 */
-CLASS wxEvtHandler FROM wxObject
+CLASS wxActivateEvent FROM wxEvent
 PRIVATE:
-  DATA FEventList INIT HB_HSetCaseMatch( {=>}, .F. )
-  DATA FEventTypeValue
 PROTECTED:
 PUBLIC:
-  METHOD ConnectActivateEvt( p1, p2, p3, p4 )
-  METHOD ConnectCommandEvt( p1, p2, p3, p4 )
-  METHOD ConnectFocusEvt( p1, p2, p3, p4 )
-  METHOD ConnectGridEvt( p1, p2, p3, p4 )
-  METHOD ConnectInitDialogEvt( p1, p2, p3, p4 )
-  METHOD ConnectMouseEvt( p1, p2, p3, p4 )
+  METHOD GetActive
 PUBLISHED:
 ENDCLASS
 
 /*
-  End Class wxEvtHandler
+  End Class wxActivateEvent
 */
